# optimal-transport

./: README.md  pyproject.toml
src/optimal_transport/: __init__.py  gradientflow.py  gravity.py  sinkhorn.ipynb  sinkhorn.py
