[project]
name = "optimal-transport"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "speed1313", email = "speedtry13@icloud.com" }
]
dependencies = [
    "jax[cpu]>=0.4.13",
    "numpy>=1.24.4",
    "matplotlib>=3.7.3",
    "POT>=0.9.1",
    "ipykernel>=6.26.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
